--- a/src/main/webapp/WEB-INF/views/students/list.html
+++ b/src/main/webapp/WEB-INF/views/students/list.html
@@ -86,6 +86,14 @@
     </table>
     <a class="btn btn-secondary" th:href="@{'/students/export-excel?searchName='+${name}+'&classId='+${classId}}">Export to Excel</a>
 </div>
+<div style="text-align: center" th:if="classId == null && name == null">
+    <a class="btn btn-primary" th:href="@{'/students/page='+${students.number - 1}}"
+       th:if="${students.hasPrevious()}">Previous</a>
+    <span th:text="${students.number + 1}"></span>|
+    <span th:text="${students.totalPages}"></span>
+    <a class="btn btn-primary" th:href="@{'/students/page='+${students.number + 1}}"
+       th:if="${students.hasNext()}">Next</a>
+</div>
 <div style="text-align: center">
     <a class="btn btn-primary" th:href="@{'/students?searchName='+${name}+'&classId='+${classId}+'&page='+${students.number - 1}}"
        th:if="${students.hasPrevious()}">Previous</a>
