--- a/src/main/webapp/WEB-INF/views/students/update.html
+++ b/src/main/webapp/WEB-INF/views/students/update.html
@@ -27,7 +27,7 @@
         </div>
         <div class="mb-3">
             <label class="form-label">Point</label>
-            <input type="text" class="form-control" th:field="*{point}" placeholder="Enter address">
+            <input type="text" class="form-control" th:field="*{point}" placeholder="Enter Point">
         </div>
         <div class="mb-3">
             <label class="form-label">Classes</label>
